# raspberry_pico_rust

./: .cursorignore  Cargo.toml  memory.x  raspberry_pico_rust.uf2  tutorial.md
.cargo/: config.toml
.cursor/rules/: databank.mdc
src/: main.rs
