[package]
name = "raspberry_pico_rust"
version = "0.1.0"
edition = "2021"

# Optimize for size in release builds
[profile.release]
opt-level = 'z'
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
overflow-checks = false

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
embedded-hal = "1.0.0"
embedded-time = "0.12"
rp-pico = "0.9.0"
panic-halt = "1.0.0"

# USB Dependencies - fix versions to match rp-pico's requirements
usb-device = "0.3.2"
usbd-serial = "0.2.2"

# Optional but recommended
defmt = "0.3"
defmt-rtt = "0.4"
