[package]
name = "raspberry_pico_rust"
version = "0.1.0"
edition = "2021"

[profile.dev]
debug = 2
debug-assertions = true
opt-level = 'z'

[profile.release]
opt-level = 'z'
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
overflow-checks = false

[dependencies]
cortex-m = { version = "0.7", features = ["inline-asm"] }
cortex-m-rt = "0.7"
embedded-hal = "1.0.0"
embedded-time = "0.12"
rp-pico = "0.9.0"
panic-halt = "1.0.0"

# USB Dependencies
usb-device = "0.3.2"
usbd-serial = "0.2.2"

# Debugging
defmt = "0.3"
defmt-rtt = "0.4"

[features]
default = ["defmt-default"]
defmt-default = []
defmt-trace = []
defmt-debug = []
defmt-info = []
defmt-warn = []
defmt-error = []
